added frontend section to backend page and added more links to the fronttend css  projects in frontend page.

--- a/src/html/careers/backend.html
+++ b/src/html/careers/backend.html
@@ -310,7 +310,7 @@
         </div>
       </section>
 
-      <!--* What is Frontend Development? -->
+      <!--* What is Backend Development? -->
       <section id="what-is" class="resource-section">
         <h2 class="resource-section__heading">
           What is Backend Development?
@@ -692,6 +692,85 @@
                     <span class="resource-link-badge">Link</span>
                   </li>
                 </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <!--* Html and Css (Beginner's Level) -->
+      <section id="frotend" class="resource-section">
+        <h2 class="resource-section__heading">
+          Basics of Frontend Development
+        </h2>
+
+        <div class="resource-section__body">
+          <p>
+            Learning the basics of frontend development is not compulsory, but it does help to understand how the frontend works since your code will be interacting with the frontend most of the time. The languages used in frontend development are Html, CSS and Javascript. You can learn more about these below:            
+          </p>
+        </div>
+
+        <div class="resource-section__links">
+          <!-- videos -->
+          <div class="resource-card">
+            <h3 class="resource-card-title">Videos</h3>
+            <ul class="resource-card-links">
+              <li class="resource-link">
+                <a target="_blank" href="https://youtu.be/UB1O30fR-EE">Html crash course for absolute beginners. ~
+                  Traversy
+                  Media</a>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://youtu.be/yfoY53QXEnI">Css crash course for absolute beginners. ~
+                  Traversy
+                  Media</a>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://youtu.be/mU6anWqZJcc">Html and Css full course from scratch. ~
+                  FreeCodeCamp</a>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://youtu.be/PkZNo7MFNFg">Learn JavaScript. Full course for beginners. ~
+                  FreeCodeCamp</a>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://youtu.be/ResWVWI333o">Javascript for web designers. ~ Envato Tuts</a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- playlist -->
+          <div class="resource-card">
+            <h3 class="resource-card-title">Curated Playlist</h3>
+            <ul class="resource-card-links">
+              <li class="resource-link">
+                <a target="_blank" href="https://youtube.com/playlist?list=PL4cUxeGkcC9ivBf_eKCPIAYXWzLlPAm6G">Html and
+                  Css Crash course tutorial. ~ The Net Ninja</a>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://youtube.com/playlist?list=PL7TLF4T4Tq2RCWa-ZRkEWXVtXteyZ2CjK">Css3 Full
+                  Tutorial. ~ Dev Dreamer</a>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://youtube.com/playlist?list=PLsyeobzWxl7qtP8Lo9TReqUMkiOp446cV">
+                  JavaScript Tutorials for beginners. ~ Telusko</a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- practical projects -->
+          <div class="resource-card">
+            <h3 class="resource-card-title">Practice Projects</h3>
+            <ul class="resource-card-links">
+              <li class="resource-link">
+                <a target="_blank"
+                  href="https://www.frontendmentor.io/challenges">Frontend
+                  Challenges - Improve your front-end coding skills by building real projects
+Solve real-world HTML, CSS and JavaScript challenges whilst working to professional designs.</a>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://youtu.be/c5SIG7Ie0dM">15 vanilla JavaScript projects. ~ Coding
+                  Addict</a>
               </li>
             </ul>
           </div>
