--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -897,13 +897,20 @@
             <h3 class="resource-card-title">Practice Projects</h3>
             <ul class="resource-card-links">
               <li class="resource-link">
-                <a target="_blank"
-                  href="https://www.frontendmentor.io/challenges?languages=HTML|CSS&types=free,free-plus">Frontend
-                  Challenges ~ Frontend Mentor</a>
+                <a target="_blank" href="https://youtube.com/playlist?list=PLt5nFcZSSiWVptXtYJssP6K3HoSl0cp-O">50+ Html
+                  and Css projects. ~ Mahdi</a>
               </li>
               <li class="resource-link">
-                <a target="_blank" href="https://youtube.com/playlist?list=PLt5nFcZSSiWVptXtYJssP6K3HoSl0cp-O">100+ Html
-                  and Css projects. ~ Mahdi</a>
+                <a target="_blank"
+                  href="https://www.frontendmentor.io/challenges?languages=HTML|CSS&types=free,free-plus">Frontend
+                  Challenges - Improve your front-end coding skills by building real projects
+Solve real-world HTML, CSS and JavaScript challenges whilst working to professional designs.</a>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://devchallenges.io">DevChallenges - Web Development Resources and Community that help you to become a Web Developer by working with Real-life projects and practices.</a>
+              </li>
+              <li class="resource-link">
+                <a target="_blank" href="https://www.codewell.cc/">Codewell - Improve your HTML and CSS skills by practising on real design templates.</a>
               </li>
             </ul>
           </div>
