refactored the fronted and backend pages.

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
     <!--* Title -->
     <title>Tech Roadmap</title>
-    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
 
     <!-- * SEO Meta Tags -->
     <!-- Primary Meta Tags -->
@@ -27,7 +27,10 @@
       property="og:description"
       content="Begin your career in Tech. Roadmaps, articles, and resources to help you choose a career path, start your journey and grow in tech."
     />
-    <meta property="og:image" content="https://careerroadmap.tech/assets/seo-image.png" />
+    <meta
+      property="og:image"
+      content="https://careerroadmap.tech/assets/seo-image.png"
+    />
     <!-- Twitter Meta Tags -->
     <meta property="twitter:careers__card" content="summary_large_image" />
     <meta property="twitter:url" content="https://careerroadmap.tech" />
@@ -36,7 +39,10 @@
       property="twitter:description"
       content="Begin your career in Tech. Roadmaps, articles, and resources to help you choose a career path, start your journey and grow in tech."
     />
-    <meta property="twitter:image" content="https://careerroadmap.tech/assets/seo-image.png" />
+    <meta
+      property="twitter:image"
+      content="https://careerroadmap.tech/assets/seo-image.png"
+    />
 
     <!--* Fonts -->
     <!-- Google fonts offline -->
