refactored the backend page and added a few links.

--- a/src/html/careers/backend.html
+++ b/src/html/careers/backend.html
@@ -286,7 +286,7 @@
 
             <!-- backend frameworks -->
             <li class="sidebar-title">
-              <a href="#js-frameworks">Backend Frameworks</a>
+              <a href="#be-frameworks">Backend Frameworks</a>
               <ul class="sidebar-sublinks">
                 <li class="sidebar-subtitle">
                   <a href="#expressjs">Express JS</a>
@@ -629,8 +629,10 @@
               below, with the most popular being VsCode.
             </p>
             <p>
-              But before diving in, check this video out; class="resource-link
-              paragraph-links"<a href="https://youtu.be/kCZQPL8u_YI"
+              But before diving in, check this resource(s) out;
+              <a
+                class="resource-link paragraph-links"
+                href="https://youtu.be/kCZQPL8u_YI"
                 >Best 3 editors for coding and why. ~ Tutmo</a
               >
             </p>
@@ -969,8 +971,18 @@
             <p>
               Backend development languages are used to develop the backend of
               the application. The languages used in backend development are
-              PHP, Python, Java, C#, C++, C, Ruby, Go, Node.js, and .NET. You
+              Node.js, PHP, Python, Java, C#, Ruby, C++, C, Go, and .NET. You
               can learn more about these below:
+            </p>
+            <p>
+              Before picking your first backend language, check these
+              resource(s) out;
+              <a
+                class="resource-link paragraph-links"
+                href="https://www.freecodecamp.org/news/what-programming-language-should-i-learn-first-19a33b0a467d/"
+                >What Programming Language Should I Learn First in 2022? ~
+                FreeCodeCamp</a
+              >
             </p>
 
             <ul class="resource-card-links">
@@ -980,16 +992,7 @@
               <li class="resource-link">
                 <a href="#python">Python</a>
               </li>
-              <li class="resource-link">
-                <a href="#php">PHP</a>
-                <span class="resource-link-badge">Coming soon</span>
-              </li>
-              <li class="resource-link">
-                <a href="#C#">C#</a>
-                <span class="resource-link-badge">Coming soon</span>
-              </li>
             </ul>
-            <p></p>
           </div>
         </section>
 
@@ -1769,11 +1772,10 @@
               they can be divided into two categories: Relational and
               Non-Relational.
             </p>
-            <p style="display: none">
-              Before picking your first database language, check these videos
-              out;
+            <p>
+              Before picking your first database language, check these
+              resource(s) out;
               <a class="resource-link paragraph-links" href="">empty Link</a>
-              <a class="resource-link paragraph-links" href="">empty link</a>
             </p>
           </div>
 
@@ -1873,26 +1875,67 @@
           </div>
         </section>
 
-        <!--* Javascript Frameworks -->
-        <section id="js-frameworks" class="resource-section">
-          <h2 class="resource-section__heading">
-            Javascript Frameworks for Backend Development
-          </h2>
+        <!--* Backend Frameworks -->
+        <section id="be-frameworks" class="resource-section">
+          <h2 class="resource-section__heading">Backend Frameworks</h2>
 
           <div class="resource-section__body">
             <p>
-              A JavaScript framework is an application framework written in
-              JavaScript where programmers can manipulate the functions and use
-              them for their convenience. They make working with JavaScript
-              easier and smoother. So you have to have reasonable knowledge of
-              JavaScript before using it.
+              Backend frameworks are the most common way to develop web apps.
+              They are a set of libraries that are used to build web
+              applications. Examples of backend frameworks are ExpressJS,
+              Django, Laravel, Ruby on Rails, etc.
             </p>
+
+            <ul class="resource-card-links">
+              <li class="resource-link">
+                Nodejs backend frameworks are ExpressJS and Koa.
+              </li>
+              <li class="resource-link">
+                Python frameworks are Django and Flask.
+              </li>
+              <li class="resource-link">
+                PHP frameworks are Laravel and Slim.
+              </li>
+              <li class="resource-link">
+                Ruby frameworks are Ruby on Rails and Sinatra.
+              </li>
+              <li class="resource-link">
+                C# frameworks are ASP.NET and ASP.NET Core.
+              </li>
+              <li class="resource-link">
+                Java frameworks are Spring and Spring Boot.
+              </li>
+              <li class="resource-link">Go frameworks are Gin and GORM.</li>
+              <li class="resource-link">
+                Rust frameworks are Rust and Rocket.
+              </li>
+              <li class="resource-link">
+                NET frameworks are .NET Core and .NET Framework.
+              </li>
+            </ul>
+
+            <p>
+              Before picking your first backend framework, check these
+              resource(s) out;
+              <a
+                class="resource-link paragraph-links"
+                href="https://blog.back4app.com/backend-frameworks/"
+                >Top 10 backend frameworks – Which is the best? ~ Back4App</a
+              >
+            </p>
+
+            <ul class="resource-card-links">
+              <li class="resource-link">
+                <a href="#expressjs">Express.js</a>
+              </li>
+            </ul>
           </div>
 
           <div class="resource-section__links">
             <!--* expressjs -->
             <div id="expressjs" class="resource-card">
-              <h3 class="resource-card-title">Express Js</h3>
+              <h3 class="resource-card-title">ExpressJS(for Node.js)</h3>
               <p>
                 Express is a minimal and flexible Node.js web application
                 framework that provides a robust set of features for web and
