refactored the backend page and added a few links.

--- a/src/html/careers/backend.html
+++ b/src/html/careers/backend.html
@@ -1925,17 +1925,17 @@
               >
             </p>
 
-            <ul class="resource-card-links">
+            <!-- <ul class="resource-card-links">
               <li class="resource-link">
                 <a href="#expressjs">Express.js</a>
               </li>
-            </ul>
+            </ul> -->
           </div>
 
           <div class="resource-section__links">
             <!--* expressjs -->
             <div id="expressjs" class="resource-card">
-              <h3 class="resource-card-title">ExpressJS(for Node.js)</h3>
+              <h3 class="resource-card-title">ExpressJS</h3>
               <p>
                 Express is a minimal and flexible Node.js web application
                 framework that provides a robust set of features for web and
